Complete the automl notebook

--- a/1_Using_Azure_Machine_Learning/udacity-project.ipynb
+++ b/1_Using_Azure_Machine_Learning/udacity-project.ipynb
@@ -312,7 +312,7 @@
       "source": [
         "# Get your best run and save the model from that run.\n",
         "best_run = hyperdrive_run.get_best_run_by_primary_metric()\n",
-        "best_run_metrics=best_run.get_metrics()\n",
+        "best_run_metrics = best_run.get_metrics()\n",
         "\n",
         "print(best_run)\n",
         "print(best_run_metrics)\n",
@@ -688,11 +688,11 @@
         }
       ],
       "source": [
-        "# Retrieve and save your best automl model\n",
-        "best_run, fitted_model = automl_run.get_output()\n",
+        "# Retrieve the best automl model\n",
+        "best_run, best_model = automl_run.get_output()\n",
         "print(best_run)\n",
         "print()\n",
-        "print(fitted_model)"
+        "print(best_model)"
       ]
     },
     {
