--- a/3_Capstone/notebooks/automl.ipynb
+++ b/3_Capstone/notebooks/automl.ipynb
@@ -29,14 +29,6 @@
    "outputs": [],
    "source": [
     "import azureml.core\n",
-    "from azureml.core.experiment import Experiment\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from azureml.train.automl import AutoMLConfig\n",
-    "from azureml.core.dataset import Dataset\n",
-    "\n",
-    "from azureml.pipeline.steps import AutoMLStep\n",
-    "\n",
-    "# Check core SDK version number\n",
     "print(\"SDK version:\", azureml.core.VERSION)"
    ]
   },
@@ -59,13 +51,18 @@
    },
    "outputs": [],
    "source": [
+    "from azureml.core.experiment import Experiment\n",
+    "from azureml.core.workspace import Workspace\n",
+    "\n",
     "ws = Workspace.from_config()\n",
     "\n",
-    "# choose a name for experiment\n",
-    "experiment_name = 'mnist-experiment-1'\n",
+    "experiment_name = 'cifar-automl-experiment'\n",
+    "experiment = Experiment(ws, experiment_name)\n",
     "\n",
-    "experiment=Experiment(ws, experiment_name)\n",
-    "experiment"
+    "print('Workspace name: ' + ws.name, \n",
+    "      'Azure region: ' + ws.location, \n",
+    "      'Subscription id: ' + ws.subscription_id, \n",
+    "      'Resource group: ' + ws.resource_group, sep = '\\n')"
    ]
   },
   {
@@ -85,17 +82,15 @@
     "from azureml.core.compute import ComputeTarget\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "# NOTE: update the cluster name to match the existing cluster\n",
-    "# Choose a name for your GPU cluster\n",
-    "amlcompute_cluster = \"mnist-cluster\"\n",
+    "# Use GPU instance because it is better suited for computer vision problems\n",
+    "amlcompute_cluster = \"cifar-cluster\"\n",
     "\n",
-    "# Verify that cluster does not exist already\n",
     "try:\n",
     "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_cluster)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_NC6\", # for CPU, use \"STANDARD_DS2_V2\"\n",
-    "                                                           vm_priority='lowpriority', # optional\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_NC6\",\n",
+    "                                                           vm_priority='lowpriority',\n",
     "                                                           max_nodes=4)\n",
     "    compute_target = ComputeTarget.create(ws, amlcompute_cluster, compute_config)\n",
     "\n",
@@ -108,11 +103,11 @@
    "source": [
     "## Dataset\n",
     "\n",
-    "### Overview\n",
-    "TODO: In this markdown cell, give an overview of the dataset you are using. Also mention the task you will be performing.\n",
+    "The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images.\n",
     "\n",
+    "The dataset is divided into five training batches and one test batch, each with 10000 images. The test batch contains exactly 1000 randomly-selected images from each class. The training batches contain the remaining images in random order, but some training batches may contain more images from one class than another. Between them, the training batches contain exactly 5000 images from each class.\n",
     "\n",
-    "TODO: Get data. In the cell below, write code to access the data you will be using in this project. Remember that the dataset needs to be external."
+    "Reference: https://www.cs.toronto.edu/~kriz/cifar.html"
    ]
   },
   {
@@ -121,17 +116,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"mnist-dataset\"\n",
-    "desc = \"The MNIST database of handwritten digits.\"\n",
+    "from azureml.core import Dataset\n",
     "\n",
-    "# TODO: Get the dataset from an external URL\n",
-    "dataset_url = ''\n",
-    "dataset = Dataset.Tabular.from_delimited_files(dataset_url)        \n",
-    "dataset = dataset.register(workspace=ws, name=name, description=desc)\n",
+    "# URL to the CIFAR-10 dataset\n",
+    "dataset_url = \"https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\"\n",
     "\n",
-    "\n",
-    "df = dataset.to_pandas_dataframe()\n",
-    "df.describe()"
+    "# Register the dataset using the Dataset class\n",
+    "dataset_name = \"cifar10_dataset\"\n",
+    "cifar10_dataset = Dataset.File.from_files(dataset_url)\n",
+    "cifar10_dataset.register(workspace=ws, name=dataset_name, create_new_version=True)"
    ]
   },
   {
@@ -162,11 +155,18 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Put your automl settings here\n",
-    "automl_settings = {}\n",
+    "from azureml.train.automl import AutoMLConfig\n",
     "\n",
-    "# TODO: Put your automl config here\n",
-    "automl_config = AutoMLConfig()"
+    "# TODO: Create AutoML config\n",
+    "automl_settings = {}\n",
+    "automl_config = AutoMLConfig(\n",
+    "    experiment_timeout_minutes=15, # How much timeout?\n",
+    "    task='classification', # Classification, right?\n",
+    "    primary_metric='accuracy',\n",
+    "    training_data=cifar10_dataset,\n",
+    "    label_column_name='', # What is the label col\n",
+    "    n_cross_validations=5\n",
+    "    )"
    ]
   },
   {
@@ -188,8 +188,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: Submit your experiment\n",
-    "remote_run = experiment.submit(automl_config)"
+    "# Submit the automl run to the experiment\n",
+    "automl_run = experiment.submit(automl_config, show_output=True)"
    ]
   },
   {
@@ -221,7 +221,12 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from azureml.widgets import RunDetails\n",
+    "\n",
+    "RunDetails(automl_run).show()\n",
+    "automl_run.wait_for_completion(show_output=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -251,28 +256,26 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Retrieve the best automl model\n",
+    "best_run, best_model = automl_run.get_output()\n",
+    "best_run_metrics = best_run.get_metrics()\n",
+    "\n",
+    "print(f\"Best run: {best_run}\\n\")\n",
+    "print(f\"Best model: {best_model}\\n\")\n",
+    "print(f\"Best run metrics: {best_run_metrics}\\n\")\n",
+    "print(f\"Associated files: {best_run.get_file_names()}\\n\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "gather": {
-     "logged": 1598431426111
-    },
-    "jupyter": {
-     "outputs_hidden": false,
-     "source_hidden": false
-    },
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#TODO: Save the best model"
+    "# TODO: Download the model\n",
+    "# Downloading model from the run into the workspace\n",
+    "best_run.download_file('models/*.*')"
    ]
   },
   {
@@ -304,7 +307,16 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from azureml.core.model import Model\n",
+    "\n",
+    "# TODO: Change the `model_path`\n",
+    "model = Model.register(model_path=\"*.keras\",\n",
+    "                       model_name=\"cirfar10-best-model\",\n",
+    "                       tags={'topic': \"computer_vision\", 'type': \"classification\"},\n",
+    "                       description=\"CNN model on CIFAR-10 dataset to classify 32x32 images.\",\n",
+    "                       workspace=ws)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -324,7 +336,7 @@
     }
    },
    "source": [
-    "TODO: In the cell below, send a request to the web service you deployed to test it."
+    "### Deploy an Azure Container Instance Web Service"
    ]
   },
   {
@@ -345,7 +357,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "service_name = 'cifar10-service'\n",
+    "\n",
+    "# Use the `deployment_config` argument for custom config\n",
+    "service = Model.deploy(ws, service_name, [model], overwrite=True)\n",
+    "\n",
+    "service.wait_for_deployment(show_output=True)\n",
+    "print(service.state)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -365,7 +385,7 @@
     }
    },
    "source": [
-    "TODO: In the cell below, print the logs of the web service and delete the service"
+    "### Test the Web Service Endpoint"
    ]
   },
   {
@@ -383,7 +403,45 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from utils import visualize\n",
+    "# TODO: Replace it with the consume script provided by AML studio\n",
+    "# Get input data (use the dumped json from the inference script) -> Show as img -> Inference\n",
+    "input_data = {\n",
+    "    \"input_key\": input_value\n",
+    "}\n",
+    "\n",
+    "# Call the web service endpoint\n",
+    "result = service.run(input_data)\n",
+    "print(\"Web service response:\", result)\n",
+    "\n",
+    "# TODO: Get the predicted labels ID\n",
+    "predicted_labels = ...\n",
+    "# TODO: Get the test labels ID\n",
+    "test_labels = ...\n",
+    "\n",
+    "visualize[result[0]]\n",
+    "print(\"Predicted labels: \", predicted_labels[0])\n",
+    "print(\"Ground truth: \", test_labels[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Delete the Resource\n",
+    "TODO: In the cell below, print the logs of the web service and delete the service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "service.delete()\n",
+    "compute_target.delete()"
+   ]
   },
   {
    "cell_type": "markdown",
