--- a/3_Capstone/notebooks/hyperparameter_tuning.ipynb
+++ b/3_Capstone/notebooks/hyperparameter_tuning.ipynb
@@ -13,8 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install tensorflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import azureml.core\n",
-    "print(\"SDK version:\", azureml.core.VERSION)"
+    "import tensorflow\n",
+    "print(\"SDK version:\", azureml.core.VERSION)\n",
+    "print(\"Tensorflow version:\", tensorflow.__version__)"
    ]
   },
   {
@@ -36,14 +47,14 @@
     "print('Workspace name: ' + ws.name, \n",
     "      'Azure region: ' + ws.location, \n",
     "      'Subscription id: ' + ws.subscription_id, \n",
-    "      'Resource group: ' + ws.resource_group, sep = '\\n')"
+    "      'Resource group: ' + ws.resource_group, sep='\\n')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Attach an AmlCompute cluster"
+    "## Attach an Compute Instance"
    ]
   },
   {
@@ -57,16 +68,16 @@
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
     "# Use GPU instance because it is better suited for computer vision problems\n",
-    "amlcompute_instance = \"cifar-instance\"\n",
+    "gpu_instance = \"cifar-instance\"\n",
     "\n",
     "try:\n",
-    "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_instance)\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=gpu_instance)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
     "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_NC6\",\n",
     "                                                           vm_priority='lowpriority',\n",
     "                                                           max_nodes=4)\n",
-    "    compute_target = ComputeTarget.create(ws, amlcompute_instance, compute_config)\n",
+    "    compute_target = ComputeTarget.create(ws, gpu_instance, compute_config)\n",
     "\n",
     "compute_target.wait_for_completion(show_output=True)"
    ]
@@ -162,10 +173,27 @@
     "from azureml.train.hyperdrive.sampling import RandomParameterSampling\n",
     "from azureml.train.hyperdrive.policy import BanditPolicy\n",
     "\n",
+    "# # Experiment with from lower to higher dropout\n",
+    "# sampling = RandomParameterSampling({\n",
+    "#     \"--dropout1\": uniform(0.0, 0.1),\n",
+    "#     \"--dropout2\": uniform(0.2, 0.5),\n",
+    "#     \"--dropout3\": normal(0.3, 0.7),\n",
+    "#     \"--epochs\": choice(10, 20, 40)\n",
+    "# })\n",
+    "\n",
+    "# # Experiment with from higher to lower dropout\n",
+    "# sampling = RandomParameterSampling({\n",
+    "#     \"--dropout1\": normal(0.3, 0.7),\n",
+    "#     \"--dropout1\": uniform(0.0, 0.1),\n",
+    "#     \"--dropout3\": uniform(0.2, 0.5),\n",
+    "#     \"--epochs\": choice(10, 20, 40)\n",
+    "# })\n",
+    "\n",
+    "# Experiment with the full range of possibilites\n",
     "sampling = RandomParameterSampling({\n",
-    "    \"--dropout1\": uniform(0.0, 0.1),\n",
-    "    \"--dropout2\": uniform(0.2, 0.5),\n",
-    "    \"--dropout3\": normal(0.3, 0.7), # Prefering normal distribution to avoid extremes\n",
+    "    \"--dropout1\": uniform(0.0, 1.0),\n",
+    "    \"--dropout2\": uniform(0.0, 1.0),\n",
+    "    \"--dropout3\": uniform(0.0, 1.0),\n",
     "    \"--epochs\": choice(10, 20, 40)\n",
     "})\n",
     "\n",
