Make the mnist training compatible with Hyperdrive

--- a/3_Capstone/notebooks/plot_history.ipynb
+++ b/3_Capstone/notebooks/plot_history.ipynb
@@ -29,10 +29,10 @@
     "import json\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "with open(\"../models/training_history.json\", \"r\") as file:\n",
+    "with open(\"../logs/mnist_history.json\", \"r\") as file:\n",
     "    history = json.load(file)\n",
     "\n",
-    "with open(\"../models/cifar_model_dropout.json\", \"r\") as file:\n",
+    "with open(\"../logs/mnist_result.json\", \"r\") as file:\n",
     "    test_accuracy = json.load(file)[\"test_accuracy\"]\n",
     "\n",
     "# Plot the training history using matplotlib\n",
