--- a/3_Capstone/notebooks/hyperparameter_tuning.ipynb
+++ b/3_Capstone/notebooks/hyperparameter_tuning.ipynb
@@ -74,7 +74,7 @@
     "    compute_target = ComputeTarget(workspace=ws, name=gpu_instance)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_NC6\",\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_DS3_V2\",\n",
     "                                                           vm_priority='lowpriority',\n",
     "                                                           max_nodes=4)\n",
     "    compute_target = ComputeTarget.create(ws, gpu_instance, compute_config)\n",
