Change the cifar problem to mnist Because of very slow dataset upload

--- a/3_Capstone/notebooks/hyperparameter_tuning.ipynb
+++ b/3_Capstone/notebooks/hyperparameter_tuning.ipynb
@@ -41,7 +41,7 @@
     "from azureml.core import Workspace, Experiment\n",
     "\n",
     "ws = Workspace.from_config()\n",
-    "experiment_name = 'cifar-hyperdrive-experiment'\n",
+    "experiment_name = 'mnist-hyperdrive-experiment'\n",
     "exp = Experiment(ws, experiment_name)\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -67,17 +67,17 @@
     "from azureml.core.compute import ComputeTarget\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "# Use GPU instance because it is better suited for computer vision problems\n",
-    "gpu_instance = \"cifar-instance\"\n",
+    "# Udacity subscription does not allow to create GPU instance\n",
+    "cpu_instance = \"mnist-instance\"\n",
     "\n",
     "try:\n",
-    "    compute_target = ComputeTarget(workspace=ws, name=gpu_instance)\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=cpu_instance)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
     "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_DS3_V2\",\n",
     "                                                           vm_priority='lowpriority',\n",
     "                                                           max_nodes=4)\n",
-    "    compute_target = ComputeTarget.create(ws, gpu_instance, compute_config)\n",
+    "    compute_target = ComputeTarget.create(ws, cpu_instance, compute_config)\n",
     "\n",
     "compute_target.wait_for_completion(show_output=True)"
    ]
@@ -88,11 +88,67 @@
    "source": [
     "## Dataset\n",
     "\n",
-    "The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images.\n",
+    "The MNIST database of handwritten digits, available from this page, has a training set of 60,000 examples, and a test set of 10,000 examples. The digits have been size-normalized and centered in a fixed-size image. The images were centered in a 28x28 image by computing the center of mass of the pixels. The data is stored in a very simple file format designed for storing vectors and multidimensional matrices.\n",
     "\n",
-    "The dataset is divided into five training batches and one test batch, each with 10000 images. The test batch contains exactly 1000 randomly-selected images from each class. The training batches contain the remaining images in random order, but some training batches may contain more images from one class than another. Between them, the training batches contain exactly 5000 images from each class.\n",
+    "Reference: http://yann.lecun.com/exdb/mnist/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.datasets import mnist\n",
     "\n",
-    "Reference: https://www.cs.toronto.edu/~kriz/cifar.html"
+    "(train_images, train_labels), (test_images, test_labels) = mnist.load_data()\n",
+    "\n",
+    "print(\"Train image shape: {}\", train_images.shape)\n",
+    "print(\"Train label shape: {}\", train_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "flattened_train_image = train_images.reshape(train_images.shape[0], -1)\n",
+    "flattened_test_image = test_images.reshape(test_images.shape[0], -1)\n",
+    "\n",
+    "train_images_df = pd.DataFrame(flattened_train_image)\n",
+    "train_labels_series = pd.Series(train_labels, name=\"labels\")\n",
+    "train_df = pd.concat([train_images_df, train_labels_series], axis=1)\n",
+    "\n",
+    "test_images_df = pd.DataFrame(flattened_test_image)\n",
+    "test_labels_series = pd.Series(test_labels, name=\"labels\")\n",
+    "test_df = pd.concat([test_images_df, test_labels_series], axis=1)\n",
+    "\n",
+    "print(train_df.head())\n",
+    "print(test_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register the Data"
    ]
   },
   {
@@ -116,13 +172,9 @@
    "source": [
     "from azureml.core import Dataset\n",
     "\n",
-    "# URL to the CIFAR-10 dataset\n",
-    "dataset_url = \"https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\"\n",
-    "\n",
-    "# Register the dataset using the Dataset class\n",
-    "dataset_name = \"cifar10_dataset\"\n",
-    "cifar10_dataset = Dataset.File.from_files(dataset_url)\n",
-    "cifar10_dataset.register(workspace=ws, name=dataset_name, create_new_version=True)"
+    "datastore = ws.get_default_datastore()\n",
+    "Dataset.Tabular.register_pandas_dataframe(dataframe=train_df, name='mnist-train', target=datastore)\n",
+    "Dataset.Tabular.register_pandas_dataframe(dataframe=test_df, name='mnist-test', target=datastore)"
    ]
   },
   {
@@ -191,18 +243,17 @@
     "\n",
     "# Experiment with the full range of possibilites\n",
     "sampling = RandomParameterSampling({\n",
-    "    \"--dropout1\": uniform(0.0, 1.0),\n",
-    "    \"--dropout2\": uniform(0.0, 1.0),\n",
-    "    \"--dropout3\": uniform(0.0, 1.0),\n",
+    "    \"--dropout1\": uniform(0.0, 0.5),\n",
+    "    \"--dropout2\": uniform(0.0, 0.5),\n",
     "    \"--epochs\": choice(10, 20, 40)\n",
     "})\n",
     "\n",
     "policy = BanditPolicy(evaluation_interval=2, slack_factor=0.2)\n",
-    "environment = Environment.get(ws, name='aml-environment')\n",
+    "tensorflow_env = Environment.from_conda_specification(name='tensorflow-env', file_path='conda_dependencies.yml')\n",
     "script = ScriptRunConfig(source_directory='.',\n",
-    "                         script='cifar10_train.py',\n",
-    "                         compute_target=amlcompute_instance,\n",
-    "                         environment=environment)\n",
+    "                         script='mnist_train.py',\n",
+    "                         compute_target=compute_target,\n",
+    "                         environment=tensorflow_env)\n",
     "\n",
     "hyperdrive_config = HyperDriveConfig(run_config=script,\n",
     "                    hyperparameter_sampling=sampling,\n",
@@ -343,7 +394,7 @@
    "source": [
     "# TODO: Download the model\n",
     "# Downloading model from the run into the workspace\n",
-    "best_run.download_file('models/cifar10-cnn-hyperdrive.keras')"
+    "best_run.download_file('models/mnist_model.keras')"
    ]
   },
   {
@@ -377,10 +428,10 @@
     "from azureml.core.model import Model\n",
     "\n",
     "# TODO: Change the `model_path`\n",
-    "model = Model.register(model_path=\"*.keras\",\n",
-    "                       model_name=\"cirfar10-best-model\",\n",
+    "model = Model.register(model_path=\"...\",\n",
+    "                       model_name=\"...\",\n",
     "                       tags={'topic': \"computer_vision\", 'type': \"classification\"},\n",
-    "                       description=\"CNN model on CIFAR-10 dataset to classify 32x32 images.\",\n",
+    "                       description=\"ANN model on MNIST dataset to classify handwritten digits.\",\n",
     "                       workspace=ws)"
    ]
   },
@@ -407,7 +458,7 @@
     "# Uncomment the following code if you want customize the deployment configuration\n",
     "# from azureml.core.webservice import AciWebservice\n",
     "# aci_config = AciWebservice.deploy_configuration(cpu_cores=1, memory_gb=1)\n",
-    "service_name = 'cifar10-service'\n",
+    "service_name = 'mnist-service'\n",
     "\n",
     "# Use the `deployment_config` argument for custom config\n",
     "service = Model.deploy(ws, service_name, [model], overwrite=True)\n",
