--- a/3_Capstone/notebooks/automl.ipynb
+++ b/3_Capstone/notebooks/automl.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "ws = Workspace.from_config()\n",
     "\n",
-    "experiment_name = 'cifar-automl-experiment'\n",
+    "experiment_name = 'mnist-automl-experiment'\n",
     "experiment = Experiment(ws, experiment_name)\n",
     "\n",
     "print('Workspace name: ' + ws.name, \n",
@@ -82,17 +82,17 @@
     "from azureml.core.compute import ComputeTarget\n",
     "from azureml.core.compute_target import ComputeTargetException\n",
     "\n",
-    "# Use GPU instance because it is better suited for computer vision problems\n",
-    "amlcompute_cluster = \"cifar-cluster\"\n",
+    "# Udacity subscription does not allow to create GPU instance\n",
+    "cpu_cluster = \"mnist-cluster\"\n",
     "\n",
     "try:\n",
-    "    compute_target = ComputeTarget(workspace=ws, name=amlcompute_cluster)\n",
+    "    compute_target = ComputeTarget(workspace=ws, name=cpu_cluster)\n",
     "    print('Found existing cluster, use it.')\n",
     "except ComputeTargetException:\n",
-    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_NC6\",\n",
+    "    compute_config = AmlCompute.provisioning_configuration(vm_size=\"STANDARD_DS3_V2\",\n",
     "                                                           vm_priority='lowpriority',\n",
     "                                                           max_nodes=4)\n",
-    "    compute_target = ComputeTarget.create(ws, amlcompute_cluster, compute_config)\n",
+    "    compute_target = ComputeTarget.create(ws, cpu_cluster, compute_config)\n",
     "\n",
     "compute_target.wait_for_completion(show_output=True)"
    ]
@@ -103,11 +103,16 @@
    "source": [
     "## Dataset\n",
     "\n",
-    "The CIFAR-10 dataset consists of 60000 32x32 colour images in 10 classes, with 6000 images per class. There are 50000 training images and 10000 test images.\n",
+    "The MNIST database of handwritten digits, available from this page, has a training set of 60,000 examples, and a test set of 10,000 examples. The digits have been size-normalized and centered in a fixed-size image. The images were centered in a 28x28 image by computing the center of mass of the pixels. The data is stored in a very simple file format designed for storing vectors and multidimensional matrices.\n",
     "\n",
-    "The dataset is divided into five training batches and one test batch, each with 10000 images. The test batch contains exactly 1000 randomly-selected images from each class. The training batches contain the remaining images in random order, but some training batches may contain more images from one class than another. Between them, the training batches contain exactly 5000 images from each class.\n",
-    "\n",
-    "Reference: https://www.cs.toronto.edu/~kriz/cifar.html"
+    "Reference: http://yann.lecun.com/exdb/mnist/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the `hyperparameter_tuning.ipynb` Dataset section to register the data before obtain it."
    ]
   },
   {
@@ -118,13 +123,9 @@
    "source": [
     "from azureml.core import Dataset\n",
     "\n",
-    "# URL to the CIFAR-10 dataset\n",
-    "dataset_url = \"https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\"\n",
-    "\n",
-    "# Register the dataset using the Dataset class\n",
-    "dataset_name = \"cifar10_dataset\"\n",
-    "cifar10_dataset = Dataset.File.from_files(dataset_url)\n",
-    "cifar10_dataset.register(workspace=ws, name=dataset_name, create_new_version=True)"
+    "# Get the already existing dataset\n",
+    "train_ds = Dataset.get_by_name(ws, \"mnist-train\")\n",
+    "test_ds = Dataset.get_by_name(ws, \"mnist-test\")"
    ]
   },
   {
@@ -157,15 +158,15 @@
    "source": [
     "from azureml.train.automl import AutoMLConfig\n",
     "\n",
-    "# TODO: Create AutoML config\n",
-    "automl_settings = {}\n",
     "automl_config = AutoMLConfig(\n",
-    "    experiment_timeout_minutes=15, # How much timeout?\n",
-    "    task='classification', # Classification, right?\n",
+    "    compute_target=compute_target,\n",
+    "    experiment_timeout_minutes=61,\n",
+    "    task='classification',\n",
     "    primary_metric='accuracy',\n",
-    "    training_data=cifar10_dataset,\n",
-    "    label_column_name='', # What is the label col\n",
-    "    n_cross_validations=5\n",
+    "    training_data=train_ds,\n",
+    "    label_column_name='labels',\n",
+    "    n_cross_validations=5,\n",
+    "    max_concurrent_iterations=4\n",
     "    )"
    ]
   },
@@ -311,10 +312,10 @@
     "from azureml.core.model import Model\n",
     "\n",
     "# TODO: Change the `model_path`\n",
-    "model = Model.register(model_path=\"*.keras\",\n",
-    "                       model_name=\"cirfar10-best-model\",\n",
+    "model = Model.register(model_path=\"...\",\n",
+    "                       model_name=\"...\",\n",
     "                       tags={'topic': \"computer_vision\", 'type': \"classification\"},\n",
-    "                       description=\"CNN model on CIFAR-10 dataset to classify 32x32 images.\",\n",
+    "                       description=\"ANN model on MNIST dataset to classify handwritten digits.\",\n",
     "                       workspace=ws)"
    ]
   },
@@ -358,7 +359,7 @@
    },
    "outputs": [],
    "source": [
-    "service_name = 'cifar10-service'\n",
+    "service_name = 'mnist-service'\n",
     "\n",
     "# Use the `deployment_config` argument for custom config\n",
     "service = Model.deploy(ws, service_name, [model], overwrite=True)\n",
