Register the best model

--- a/3_Capstone/notebooks/hyperparameter_tuning.ipynb
+++ b/3_Capstone/notebooks/hyperparameter_tuning.ipynb
@@ -425,14 +425,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from azureml.core.model import Model\n",
-    "\n",
-    "# TODO: Change the `model_path`\n",
-    "model = Model.register(model_path=\"...\",\n",
-    "                       model_name=\"...\",\n",
-    "                       tags={'topic': \"computer_vision\", 'type': \"classification\"},\n",
-    "                       description=\"ANN model on MNIST dataset to classify handwritten digits.\",\n",
-    "                       workspace=ws)"
+    "model = best_run.register_model(model_name='mnist_model', model_framework=\"TensorFlow\", model_path='outputs/mnist_model.keras')"
    ]
   },
   {
@@ -455,6 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from azureml.core.model import Model\n",
     "# Uncomment the following code if you want customize the deployment configuration\n",
     "# from azureml.core.webservice import AciWebservice\n",
     "# aci_config = AciWebservice.deploy_configuration(cpu_cores=1, memory_gb=1)\n",
